# generated

./: .gitignore  Cargo.toml  Makefile  Makefile.generated  README.md  justfile
acceleratedmobilepageurl/v1/: spec.json
adexchangebuyer/v1.4/: spec.json
adexchangebuyer2/v2beta1/: spec.json
adexperiencereport/v1/: spec.json
admin/reports_v1/: spec.json
adsense/v1.4/: spec.json
adsensehost/v4.1/: spec.json
androiddeviceprovisioning/v1/: spec.json
androidenterprise/v1/: spec.json
androidpublisher/v1/: spec.json
androidpublisher/v1.1/: spec.json
androidpublisher/v2/: spec.json
androidpublisher/v3/: spec.json
appengine/v1/: spec.json
appengine/v1alpha/: spec.json
appengine/v1beta/: spec.json
appsactivity/v1/: spec.json
appstate/v1/: spec.json
bigquerydatatransfer/v1/: spec.json
blogger/v2/: spec.json
calendar/v3/: spec.json
ci/: script.sh
classroom/v1/: spec.json
cloudbilling/v1/: spec.json
clouderrorreporting/v1beta1/: spec.json
cloudfunctions/v1/: spec.json
cloudfunctions/v1beta2/: spec.json
cloudprivatecatalog/v1beta1/: spec.json
cloudresourcemanager/v1/: spec.json
cloudscheduler/v1/: spec.json
cloudscheduler/v1beta1/: spec.json
cloudtasks/v2/: spec.json
cloudtasks/v2beta2/: spec.json
cloudtrace/v1/: spec.json
commentanalyzer/v1alpha1/: spec.json
compute/beta/: spec.json
compute/v1/: spec.json
container/v1/: spec.json
containeranalysis/v1beta1/: spec.json
dataproc/v1/: spec.json
datastore/v1beta3/: spec.json
deploymentmanager/alpha/: spec.json
dfareporting/v3.1/: spec.json
dfareporting/v3.2/: spec.json
dialogflow/v2/: spec.json
discovery/v1/: spec.json
dlp/v2/: spec.json
dns/v1/: spec.json
dns/v2beta1/: spec.json
docs/v1/: spec.json
driveactivity/v2/: spec.json
etc/: api-index-mapped.v1.json  api-index.v1.json  identitytoolkit.patch
firebase/v1beta1/: spec.json
firebasedynamiclinks/v1/: spec.json
firebasehosting/v1beta1/: spec.json
games/v1/: spec.json
gamesConfiguration/v1configuration/: spec.json
gamesManagement/v1management/: spec.json
genomics/v1/: spec.json
google_cli_shared/: Cargo.toml
templates/: Cargo.toml.liquid  Makefile.liquid  justfile.liquid
urlshortener1-cli/: Cargo.toml  README.md
urlshortener1-cli/src/: cmn.rs  main.rs
(+768 files in other folders)
