[package]

name = "google-urlshortener1-cli"
version = "0.1.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "A test-implementation to see how code could look like for latest API"
edition = "2018"
publish = false

[[bin]]
name = "urlshortener1"
path = "src/main.rs"

[dependencies]
mime = "^ 0.3.13"
serde = "^ 1.0"
serde_json = "^ 1.0"
serde_derive = "^ 1.0"
yup-oauth2 = "^ 3.1"
google_api_auth = { git = "https://github.com/google-apis-rs/generator", features = ["with-yup-oauth2"] }
strsim = "^0.9"
hyper-rustls = "^0.16"
yup-hyper-mock = "^3.0"
clap = "^2.33"
hyper = "0.12.33"

[dependencies.google-urlshortener1]
path = "../gen/urlshortener/v1/lib"
version = "0.1.0"

[workspace]
