[package]

name = "google-urlshortener1-cli"
version = "0.1.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "A test-implementation to see how code could look like for latest API"
edition = "2018"
publish = false

[[bin]]
name = "urlshortener1"
path = "src/main.rs"

[dependencies]
yup-oauth2 = "^ 3.1"
google_api_auth = { git = "https://github.com/google-apis-rs/generator", features = ["with-yup-oauth2"] }
hyper-rustls = "^0.16"
clap = "^2.33"
hyper = "0.12.33"
serde_json = "1.0.40"

[dependencies.google-urlshortener1]
path = "../gen/urlshortener/v1/lib"
version = "0.1.0"

[dependencies.google-cli-shared]
path = "../google_cli_shared"
version = "0.1.0"

[workspace]
